# bevy

./: ASSETS.md  ASSET_GENERATION.md  Cargo.toml  DESIGN_GUIDELINES.md  Dockerfile.dev  GAME_SPECS.md  README.md  Trunk.toml  Trunk.toml.bak  compose.yml  index.html  prolbem.md
docs/: ASSET_WORK_REPORT.md
migrations/: 20231222000000_full_game_schema.sql  20231222030000_update_lod_theme.sql
public/: debug.js  index.html
public/assets/: README.md  manifest.json
public/assets/characters/martial_artist/male/: spritesheet.png.backup
public/assets/i18n/: en.json  ko.json
public/assets/maps/: milles.json
public/assets/monsters/dragon/: spritesheet.png.backup
public/assets/monsters/fox/: spritesheet.png.backup
public/assets/monsters/ghost/: spritesheet.png.backup
public/assets/monsters/rat/: spritesheet.png.backup
public/assets/sprites/anchors/: warrior_male.json
public/assets/sprites/manifests/: dragon.json  rat.json  warrior_male.json
src/: app.rs  game_main.rs  lib.rs  server_main.rs
src/client/: animation.rs  building.rs  camera.rs  components.rs  enemy.rs  equipment.rs  game.rs  graphics.rs  inventory.rs  map.rs  mod.rs  player.rs  resources.rs  states.rs  systems.rs  ui.rs
src/client/components/: character_window.rs  hud.rs  mod.rs  skill_window.rs
src/client/game/: canvas.rs  mod.rs
src/client/game/systems/: audio.rs  combat.rs  map_renderer.rs  mod.rs  movement.rs  sprite_loader.rs
src/domain/character/: models.rs
src/game/: canvas.rs
src/server/: auth.rs  mod.rs  monsters.rs  skills.rs
src/shared/: constants.rs  mod.rs
src/shared/data/: assets.rs  characters.rs  items.rs  maps.rs  mod.rs  monsters.rs  skills.rs
src/shared/domain/: mod.rs  monster.rs
src/shared/domain/character/: models.rs
src/shared/domain/monster/: models.rs
src/shared/domain/shared/: models.rs
src/shared/domain/skill/: components.rs  models.rs  server.rs
src/shared/domain/sprite/: anchor.rs  layer.rs  manifest.rs  mod.rs
style/: main.css
