[package]
name = "legend"
version = "0.1.0"
edition = "2024"

[lib]
name = "legend_client"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "legend-api"
path = "src/server_main.rs"

[dependencies]
# Core
leptos = { version = "0.8", features = ["nightly"] }
leptos_meta = "0.8"
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
log = "0.4"
thiserror = "2"

# WASM/Browser (CSR)
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlAudioElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "MouseEvent",
    "ImageData",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
send_wrapper = "0.6"
gloo-net = "0.6"

# Game
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Server only (SSR feature)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
bcrypt = { version = "0.17", optional = true }
jsonwebtoken = { version = "9", optional = true }
once_cell = { version = "1", optional = true }

[features]
default = ["csr"]
csr = ["leptos/csr"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:once_cell",
]

[profile.dev]
debug = 0
split-debuginfo = "off"

[profile.release]
debug = 0
split-debuginfo = "off"
lto = true
opt-level = "z"

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = "z"
