[package]
name = "legend"
version = "0.1.0"
edition = "2024"

[lib]
name = "legend_client"
crate-type = ["rlib"]

[[bin]]
name = "legend-game"
path = "src/game_main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
log = "0.4"
thiserror = "2"
futures-lite = "2"

# Game (Shared)
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Bevy Game Engine (Client)
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "webp",
    "x11",
] }

# WASM support
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["client"]
client = []
wasm = ["dep:getrandom", "dep:console_error_panic_hook"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = "z"
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
